--- a/tests/testdata/mj-raw-head-expected.html
+++ b/tests/testdata/mj-raw-head-expected.html
@@ -69,6 +69,12 @@
       }
     }
   </style>
+  <style media="screen and (min-width:480px)">
+    .moz-text-html .mj-column-per-100 {
+      width: 100% !important;
+      max-width: 100%;
+    }
+  </style>
   <style type="text/css">
   </style>
   <!-- Your content goes here -->
