--- a/tests/testdata/text_with_html-expected.html
+++ b/tests/testdata/text_with_html-expected.html
@@ -63,6 +63,12 @@
       }
     }
   </style>
+  <style media="screen and (min-width:480px)">
+    .moz-text-html .mj-column-per-100 {
+      width: 100% !important;
+      max-width: 100%;
+    }
+  </style>
   <style type="text/css">
   </style>
 </head>
