Adjust skeleton to add word-spacing: normal to body of html (upstream commit 9ee7dc274)
upstream commit found in 4.8.0

commit 9ee7dc2746b3dc4f1ea1a979cdd9c6807392ec34
Author: Jack Steele <jsteele883@gmail.com>
Date:   Thu Oct 1 14:45:02 2020 +0100

    Adjust skeleton to add word-spacing: normal to body of html

The motivation to do this is mentioned in upstream pull request 2049:

  Fix issue with stacking columns within mj-group in Gmail for IOS
  https://github.com/mjmlio/mjml/pull/2049

> This PR resolves the bug in Gmail on IOS where the word-spacing: 1px is
> added to the body causing the mj-group columns to stack. The issue is
> outlined here hteumeuleu/email-bugs#80 and the suggested fix is provided
> by Mark Robbins.
> ...
> Columns are stacking in IOS 14 on Gmail. The fix will ensure that the
> columns remain inline.

--- a/tests/testdata/mj-raw-head-expected.html
+++ b/tests/testdata/mj-raw-head-expected.html
@@ -80,7 +80,7 @@
   <!-- Your content goes here -->
 </head>
 
-<body>
+<body style="word-spacing:normal;">
   <div style="">
     <!--[if mso | IE]>
       <table
