--- a/tests/testdata/mj-raw-head-with-tags-expected.html
+++ b/tests/testdata/mj-raw-head-with-tags-expected.html
@@ -75,7 +75,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
+<body style="word-spacing:normal;">
   <div style="">
     <!--[if mso | IE]>
       <table
