--- a/tests/testdata/mj-raw-with-tags-expected.html
+++ b/tests/testdata/mj-raw-with-tags-expected.html
@@ -59,7 +59,7 @@
   </style>
 </head>
 
-<body>
+<body style="word-spacing:normal;">
   <div style="">
     <!-- Your content goes here -->
     <h1 style="color:red;">Hello World!</h1>
