--- a/tests/testdata/mj-preview-expected.html
+++ b/tests/testdata/mj-preview-expected.html
@@ -79,7 +79,7 @@
   </style>
 </head>
 
-<body>
+<body style="word-spacing:normal;">
   <div style="display:none;font-size:1px;color:#ffffff;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;"> Hello MJML </div>
   <div style="">
     <!--[if mso | IE]>
