--- a/tests/testdata/mj-raw-expected.html
+++ b/tests/testdata/mj-raw-expected.html
@@ -59,7 +59,7 @@
   </style>
 </head>
 
-<body>
+<body style="word-spacing:normal;">
   <div style="">
     <!-- Your content goes here -->
   </div>
