--- a/tests/testdata/mj-title-expected.html
+++ b/tests/testdata/mj-title-expected.html
@@ -3,7 +3,7 @@
 
 <head>
   <title> Hello MJML </title>
-  <!--[if !mso]><!-- -->
+  <!--[if !mso]><!-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!--<![endif]-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
