fix align type and outlook (upstream commit 8c10d525)
upstream commit found in 4.8.0

commit 8c10d5257c0c183eeb275ae95ad763a5c8553657
Author: KMcB <cavrois.cedric@hotmail.fr>
Date:   Mon Dec 28 17:28:35 2020 +0100

    fix align type and outlook (fix #407)

related upstream issues/pull requests:

- Suggestion: configurable alignment for divider (https://github.com/mjmlio/mjml/issues/407)
- Add align attribute to divider (https://github.com/mjmlio/mjml/pull/2087)
- fix align type and outlook (https://github.com/mjmlio/mjml/pull/2125)

--- a/tests/testdata/hello-world-expected.html
+++ b/tests/testdata/hello-world-expected.html
@@ -121,7 +121,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                    <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                       <p style="border-top:solid 4px #F45E43;font-size:1px;margin:0px auto;width:100%;">
                       </p>
                       <!--[if mso | IE]>
