add initial support for CSS inlining

--- a/tests/testdata/hello-world-expected.html
+++ b/tests/testdata/hello-world-expected.html
@@ -124,7 +124,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                      <td align="left" class="box" style="font-size:0px;padding:10px 25px;word-break:break-word;border: 5px solid red">
                         <div style="font-family:helvetica;font-size:20px;line-height:1;text-align:left;color:#F45E43;">Hello World</div>
                       </td>
                     </tr>
