--- a/tests/testdata/mj-social-expected.html
+++ b/tests/testdata/mj-social-expected.html
@@ -2,8 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 
 <head>
-  <title>
-  </title>
+  <title></title>
   <!--[if !mso]><!-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!--<![endif]-->
@@ -118,7 +117,7 @@
                                   </tbody>
                                 </table>
                               </td>
-                              <td style="vertical-align:middle;">
+                              <td style="vertical-align:middle;padding:4px 4px 4px 0;">
                                 <a href="https://www.facebook.com/sharer/sharer.php?u=https://mjml.io/" style="color:#333333;font-size:15px;font-family:Ubuntu, Helvetica, Arial, sans-serif;line-height:22px;text-decoration:none;" target="_blank"> Facebook </a>
                               </td>
                             </tr>
@@ -141,7 +140,7 @@
                                   </tbody>
                                 </table>
                               </td>
-                              <td style="vertical-align:middle;">
+                              <td style="vertical-align:middle;padding:4px 4px 4px 0;">
                                 <a href="https://plus.google.com/share?url=https://mjml.io/" style="color:#333333;font-size:15px;font-family:Ubuntu, Helvetica, Arial, sans-serif;line-height:22px;text-decoration:none;" target="_blank"> Google </a>
                               </td>
                             </tr>
@@ -164,7 +163,7 @@
                                   </tbody>
                                 </table>
                               </td>
-                              <td style="vertical-align:middle;">
+                              <td style="vertical-align:middle;padding:4px 4px 4px 0;">
                                 <a href="https://twitter.com/intent/tweet?url=https://mjml.io/" style="color:#333333;font-size:15px;font-family:Ubuntu, Helvetica, Arial, sans-serif;line-height:22px;text-decoration:none;" target="_blank"> Twitter </a>
                               </td>
                             </tr>
