--- a/tests/testdata/mj-group-expected.html
+++ b/tests/testdata/mj-group-expected.html
@@ -91,7 +91,7 @@
 
   </style>
   <style type="text/css">
-    @media only screen and (max-width:480px) {
+    @media only screen and (max-width:479px) {
       table.mj-full-width-mobile {
         width: 100% !important;
       }
@@ -126,7 +126,7 @@
                             <tbody>
                               <tr>
                                 <td style="width:137px;">
-                                  <img height="185" src="https://mjml.io/assets/img/easy-and-quick.png" style="border:0;display:block;outline:none;text-decoration:none;height:185px;width:100%;font-size:13px;" width="137" />
+                                  <img src="https://mjml.io/assets/img/easy-and-quick.png" style="border:0;display:block;outline:none;text-decoration:none;height:185px;width:100%;font-size:13px;" width="137" height="185" />
                                 </td>
                               </tr>
                             </tbody>
@@ -154,7 +154,7 @@
                             <tbody>
                               <tr>
                                 <td style="width:166px;">
-                                  <img height="185" src="https://mjml.io/assets/img/responsive.png" style="border:0;display:block;outline:none;text-decoration:none;height:185px;width:100%;font-size:13px;" width="166" />
+                                  <img src="https://mjml.io/assets/img/responsive.png" style="border:0;display:block;outline:none;text-decoration:none;height:185px;width:100%;font-size:13px;" width="166" height="185" />
                                 </td>
                               </tr>
                             </tbody>
