--- a/tests/testdata/mj-image-with-empty-alt-attribute-expected.html
+++ b/tests/testdata/mj-image-with-empty-alt-attribute-expected.html
@@ -74,7 +74,7 @@
 
   </style>
   <style type="text/css">
-    @media only screen and (max-width:480px) {
+    @media only screen and (max-width:479px) {
       table.mj-full-width-mobile {
         width: 100% !important;
       }
@@ -107,7 +107,7 @@
                           <tbody>
                             <tr>
                               <td style="width:100px;">
-                                <img alt="" height="100" src="https://picsum.photos/100" style="border:0;display:block;outline:none;text-decoration:none;height:100px;width:100%;font-size:13px;" width="100" />
+                                <img alt="" src="https://picsum.photos/100" style="border:0;display:block;outline:none;text-decoration:none;height:100px;width:100%;font-size:13px;" width="100" height="100" />
                               </td>
                             </tr>
                           </tbody>
