--- a/tests/testdata/mj-image-with-href-expected.html
+++ b/tests/testdata/mj-image-with-href-expected.html
@@ -74,7 +74,7 @@
 
   </style>
   <style type="text/css">
-    @media only screen and (max-width:480px) {
+    @media only screen and (max-width:479px) {
       table.mj-full-width-mobile {
         width: 100% !important;
       }
@@ -108,7 +108,7 @@
                             <tr>
                               <td style="width:100px;">
                                 <a href="http://foo.example" target="_blank">
-                                  <img height="100" src="https://picsum.photos/100" style="border:0;display:block;outline:none;text-decoration:none;height:100px;width:100%;font-size:13px;" width="100" />
+                                  <img src="https://picsum.photos/100" style="border:0;display:block;outline:none;text-decoration:none;height:100px;width:100%;font-size:13px;" width="100" height="100" />
                                 </a>
                               </td>
                             </tr>
