--- a/tests/testdata/mj-head-with-comment-expected.html
+++ b/tests/testdata/mj-head-with-comment-expected.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
+<html lang="und" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 
 <head>
   <title></title>
@@ -61,7 +61,7 @@
 </head>
 
 <body style="word-spacing:normal;">
-  <div style="">
+  <div style="" lang="und">
   </div>
 </body>
 
