update code so it generates the same HTML as mjml 4.14
`css-inlining-expected.html` tweaked manually because mjml 4.14 renders
`&gt;` as `&amp;gt;'`. That problem is fixed in mjml 4.15.

--- a/tests/testdata/css-inlining-expected.html
+++ b/tests/testdata/css-inlining-expected.html
@@ -1,14 +1,16 @@
-<!doctype html>
+<!DOCTYPE>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 
 <head>
-  <title>
-  </title>
+  <title></title>
   <!--[if !mso]><!-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  </meta>
   <!--<![endif]-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  </meta>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  </meta>
   <style type="text/css">
     #outlook a {
       padding: 0;
@@ -75,7 +77,7 @@
 
   </style>
   <style type="text/css">
-    @media only screen and (max-width:480px) {
+    @media only screen and (max-width:479px) {
       table.mj-full-width-mobile {
         width: 100% !important;
       }
@@ -91,7 +93,7 @@
 </head>
 
 <body style="word-spacing:normal;">
-  <div style>
+  <div style="">
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="margin:0px auto;max-width:600px;">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
@@ -108,7 +110,7 @@
                           <tbody>
                             <tr>
                               <td style="width:100px;">
-                                <img height="auto" src="/assets/img/logo-small.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="100">
+                                <img src="/assets/img/logo-small.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="100" height="auto"></img>
                               </td>
                             </tr>
                           </tbody>
