--- a/tests/testdata/mj-navbar-expected.html
+++ b/tests/testdata/mj-navbar-expected.html
@@ -2,8 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 
 <head>
-  <title>
-  </title>
+  <title></title>
   <!--[if !mso]><!-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!--<![endif]-->
@@ -88,7 +87,7 @@
       visibility: visible !important;
     }
 
-    @media only screen and (max-width:480px) {
+    @media only screen and (max-width:479px) {
       .mj-menu-checkbox[type="checkbox"]~.mj-inline-links {
         display: none !important;
       }
@@ -134,10 +133,10 @@
                     <tr>
                       <td align="center" style="font-size:0px;word-break:break-word;">
                         <!--[if !mso><!-->
-                        <input type="checkbox" id="be9aeea6c00a2d06" class="mj-menu-checkbox" style="display:none !important; max-height:0; visibility:hidden;" />
+                        <input type="checkbox" id="c61192b4be1449f8" class="mj-menu-checkbox" style="display:none !important; max-height:0; visibility:hidden;" />
                         <!--<![endif]-->
                         <div class="mj-menu-trigger" style="display:none;max-height:0px;max-width:0px;font-size:0px;overflow:hidden;">
-                          <label for="be9aeea6c00a2d06" class="mj-menu-label" style="display:block;cursor:pointer;mso-hide:all;-moz-user-select:none;user-select:none;color:#ffffff;font-size:30px;font-family:Ubuntu, Helvetica, Arial, sans-serif;text-transform:uppercase;text-decoration:none;line-height:30px;padding:10px;" align="center">
+                          <label for="c61192b4be1449f8" class="mj-menu-label" style="display:block;cursor:pointer;mso-hide:all;-moz-user-select:none;user-select:none;color:#ffffff;font-size:30px;font-family:Ubuntu, Helvetica, Arial, sans-serif;text-transform:uppercase;text-decoration:none;line-height:30px;padding:10px;" align="center">
                             <span class="mj-menu-icon-open" style="mso-hide:all;"> &#9776; </span>
                             <span class="mj-menu-icon-close" style="display:none;mso-hide:all;"> &#8855; </span>
                           </label>
