--- a/tests/testdata/mj-head-with-comment-expected.html
+++ b/tests/testdata/mj-head-with-comment-expected.html
@@ -61,7 +61,7 @@
 </head>
 
 <body style="word-spacing:normal;">
-  <div style="" lang="und" dir="auto">
+  <div aria-roledescription="email" style="" role="article" lang="und" dir="auto">
   </div>
 </body>
 
