--- a/tests/testdata/mj-raw-with-tags-expected.html
+++ b/tests/testdata/mj-raw-with-tags-expected.html
@@ -60,7 +60,7 @@
 </head>
 
 <body style="word-spacing:normal;">
-  <div style="" lang="und" dir="auto">
+  <div aria-roledescription="email" style="" role="article" lang="und" dir="auto">
     <!-- Your content goes here -->
     <h1 style="color:red;">Hello World!</h1>
     <hr />
