--- a/tests/testdata/mj-section-with-background-expected.html
+++ b/tests/testdata/mj-section-with-background-expected.html
@@ -83,7 +83,7 @@
 </head>
 
 <body style="word-spacing:normal;">
-  <div style="" lang="und" dir="auto">
+  <div aria-roledescription="email" style="" role="article" lang="und" dir="auto">
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><v:rect style="width:600px;" xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false"><v:fill origin="0.5, 0" position="0.5, 0" src="http://site.example/test.png" type="tile" size="1,1" aspect="atmost" /><v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0"><![endif]-->
     <div style="background:url('http://site.example/test.png') center top / contain repeat;background-position:center top;background-repeat:repeat;background-size:contain;margin:0px auto;max-width:600px;">
       <div style="line-height:0;font-size:0;">
