--- a/tests/testdata/mj-section-with-full-width-expected.html
+++ b/tests/testdata/mj-section-with-full-width-expected.html
@@ -83,7 +83,7 @@
 </head>
 
 <body style="word-spacing:normal;">
-  <div style="" lang="und" dir="auto">
+  <div aria-roledescription="email" style="" role="article" lang="und" dir="auto">
     <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
       <tbody>
         <tr>
