add `alt` attribute to various components, regenerate all expected HTML files with mjml 4.16.0

--- a/tests/testdata/mj-group-expected.html
+++ b/tests/testdata/mj-group-expected.html
@@ -124,7 +124,7 @@
                             <tbody>
                               <tr>
                                 <td style="width:137px;">
-                                  <img src="https://mjml.io/assets/img/easy-and-quick.png" style="border:0;display:block;outline:none;text-decoration:none;height:185px;width:100%;font-size:13px;" width="137" height="185" />
+                                  <img alt="" src="https://mjml.io/assets/img/easy-and-quick.png" style="border:0;display:block;outline:none;text-decoration:none;height:185px;width:100%;font-size:13px;" width="137" height="185" />
                                 </td>
                               </tr>
                             </tbody>
@@ -152,7 +152,7 @@
                             <tbody>
                               <tr>
                                 <td style="width:166px;">
-                                  <img src="https://mjml.io/assets/img/responsive.png" style="border:0;display:block;outline:none;text-decoration:none;height:185px;width:100%;font-size:13px;" width="166" height="185" />
+                                  <img alt="" src="https://mjml.io/assets/img/responsive.png" style="border:0;display:block;outline:none;text-decoration:none;height:185px;width:100%;font-size:13px;" width="166" height="185" />
                                 </td>
                               </tr>
                             </tbody>
