--- a/tests/testdata/mj-social-expected.html
+++ b/tests/testdata/mj-social-expected.html
@@ -106,7 +106,7 @@
                                     <tr>
                                       <td style="font-size:0;height:30px;vertical-align:middle;width:30px;">
                                         <a href="https://www.facebook.com/sharer/sharer.php?u=https://mjml.io/" target="_blank">
-                                          <img height="30" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/facebook.png" style="border-radius:3px;display:block;" width="30" />
+                                          <img alt="" height="30" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/facebook.png" style="border-radius:3px;display:block;" width="30" />
                                         </a>
                                       </td>
                                     </tr>
@@ -129,7 +129,7 @@
                                     <tr>
                                       <td style="font-size:0;height:30px;vertical-align:middle;width:30px;">
                                         <a href="https://plus.google.com/share?url=https://mjml.io/" target="_blank">
-                                          <img height="30" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/google-plus.png" style="border-radius:3px;display:block;" width="30" />
+                                          <img alt="" height="30" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/google-plus.png" style="border-radius:3px;display:block;" width="30" />
                                         </a>
                                       </td>
                                     </tr>
@@ -152,7 +152,7 @@
                                     <tr>
                                       <td style="font-size:0;height:30px;vertical-align:middle;width:30px;">
                                         <a href="https://twitter.com/intent/tweet?url=https://mjml.io/" target="_blank">
-                                          <img height="30" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/twitter.png" style="border-radius:3px;display:block;" width="30" />
+                                          <img alt="" height="30" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/twitter.png" style="border-radius:3px;display:block;" width="30" />
                                         </a>
                                       </td>
                                     </tr>
