--- a/tests/testdata/css-inlining-expected.html
+++ b/tests/testdata/css-inlining-expected.html
@@ -1,16 +1,13 @@
-<!DOCTYPE>
+<!doctype html>
 <html lang="und" dir="auto" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 
 <head>
   <title></title>
   <!--[if !mso]><!-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  </meta>
   <!--<![endif]-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  </meta>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  </meta>
   <style type="text/css">
     #outlook a {
       padding: 0;
@@ -108,7 +105,7 @@
                           <tbody>
                             <tr>
                               <td style="width:100px;">
-                                <img src="/assets/img/logo-small.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="100" height="auto"></img>
+                                <img alt src="/assets/img/logo-small.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="100" height="auto">
                               </td>
                             </tr>
                           </tbody>
