--- a/tests/testdata/hello-world-expected.html
+++ b/tests/testdata/hello-world-expected.html
@@ -105,7 +105,7 @@
                           <tbody>
                             <tr>
                               <td style="width:100px;">
-                                <img src="/assets/img/logo-small.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="100" height="auto" />
+                                <img alt="" src="/assets/img/logo-small.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="100" height="auto" />
                               </td>
                             </tr>
                           </tbody>
