--- a/tests/testdata/mj-button-with-width-expected.html
+++ b/tests/testdata/mj-button-with-width-expected.html
@@ -95,7 +95,7 @@
                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
                   <tbody>
                     <tr>
-                      <td align="center" vertical-align="middle" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                      <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                         <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;width:100px;line-height:100%;">
                           <tbody>
                             <tr>
