--- a/tests/testdata/mj-image-with-href-expected.html
+++ b/tests/testdata/mj-image-with-href-expected.html
@@ -106,7 +106,7 @@
                             <tr>
                               <td style="width:100px;">
                                 <a href="http://foo.example" target="_blank">
-                                  <img src="https://picsum.photos/100" style="border:0;display:block;outline:none;text-decoration:none;height:100px;width:100%;font-size:13px;" width="100" height="100" />
+                                  <img alt="" src="https://picsum.photos/100" style="border:0;display:block;outline:none;text-decoration:none;height:100px;width:100%;font-size:13px;" width="100" height="100" />
                                 </a>
                               </td>
                             </tr>
