implement required changes so the generated HTML matches mjml 4.17.0

--- a/tests/testdata/mj-accordion-expected.html
+++ b/tests/testdata/mj-accordion-expected.html
@@ -58,12 +58,8 @@
     </style>
     <![endif]-->
   <!--[if !mso]><!-->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700" rel="stylesheet" type="text/css">
   <style type="text/css">
-    @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700);
-    @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700);
     @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);
 
   </style>
@@ -179,7 +175,7 @@
                                       <table cellspacing="0" cellpadding="0" style="width:100%;border-bottom:none;">
                                         <tbody>
                                           <tr>
-                                            <td style="width:100%;background-color:#fafafa;color:#031017;font-size:18px;font-family:Roboto, Open Sans, Helvetica, Arial, sans-serif;padding:15px;"> Why use an accordion? </td>
+                                            <td style="width:100%;background-color:#fafafa;color:#031017;font-size:18px;font-family:Ubuntu, Helvetica, Arial, sans-serif;padding:15px;"> Why use an accordion? </td>
                                             <!--[if !mso | IE]><!-->
                                             <td class="mj-accordion-ico" style="padding:16px;background:#fafafa;vertical-align:middle;"><img src="https://i.imgur.com/Xvw0vjq.png" alt="+" class="mj-accordion-more" style="display:none;width:24px;height:24px;" /><img src="https://i.imgur.com/KKHenWa.png" alt="-" class="mj-accordion-less" style="display:none;width:24px;height:24px;" /></td><!--<![endif]-->
                                           </tr>
@@ -190,7 +186,7 @@
                                       <table cellspacing="0" cellpadding="0" style="width:100%;border-bottom:none;">
                                         <tbody>
                                           <tr>
-                                            <td style="background:#fafafa;font-size:14px;font-family:Open Sans, Helvetica, Arial, sans-serif;line-height:1;color:#505050;padding:15px;">
+                                            <td style="background:#fafafa;font-size:14px;font-family:Ubuntu, Helvetica, Arial, sans-serif;line-height:1;color:#505050;padding:15px;">
                                               <span style="line-height:20px"> Because emails with a lot of content are most of the time a very bad experience on mobile, mj-accordion comes handy when you want to deliver a lot of information in a concise way. </span>
                                             </td>
                                           </tr>
@@ -210,7 +206,7 @@
                                       <table cellspacing="0" cellpadding="0" style="width:100%;border-bottom:none;">
                                         <tbody>
                                           <tr>
-                                            <td style="width:100%;background-color:#fafafa;color:#031017;font-size:18px;font-family:Roboto, Open Sans, Helvetica, Arial, sans-serif;padding:15px;"> How it works </td>
+                                            <td style="width:100%;background-color:#fafafa;color:#031017;font-size:18px;font-family:Ubuntu, Helvetica, Arial, sans-serif;padding:15px;"> How it works </td>
                                             <!--[if !mso | IE]><!-->
                                             <td class="mj-accordion-ico" style="padding:16px;background:#fafafa;vertical-align:middle;"><img src="https://i.imgur.com/Xvw0vjq.png" alt="+" class="mj-accordion-more" style="display:none;width:24px;height:24px;" /><img src="https://i.imgur.com/KKHenWa.png" alt="-" class="mj-accordion-less" style="display:none;width:24px;height:24px;" /></td><!--<![endif]-->
                                           </tr>
@@ -221,7 +217,7 @@
                                       <table cellspacing="0" cellpadding="0" style="width:100%;border-bottom:none;">
                                         <tbody>
                                           <tr>
-                                            <td style="background:#fafafa;font-size:14px;font-family:Open Sans, Helvetica, Arial, sans-serif;line-height:1;color:#505050;padding:15px;">
+                                            <td style="background:#fafafa;font-size:14px;font-family:Ubuntu, Helvetica, Arial, sans-serif;line-height:1;color:#505050;padding:15px;">
                                               <span style="line-height:20px"> Content is stacked into tabs and users can expand them at will. If responsive styles are not supported (mostly on desktop clients), tabs are then expanded and your content is readable at once. </span>
                                             </td>
                                           </tr>
