--- a/tests/testdata/mj-carousel-expected.html
+++ b/tests/testdata/mj-carousel-expected.html
@@ -126,6 +126,12 @@
       border-color: #cccccc !important;
     }
 
+    .mj-carousel-a043bae1603803a8-radio-1:checked+*+*+.mj-carousel-content .mj-carousel-a043bae1603803a8-thumbnail,
+    .mj-carousel-a043bae1603803a8-radio-2:checked+*+.mj-carousel-content .mj-carousel-a043bae1603803a8-thumbnail,
+    .mj-carousel-a043bae1603803a8-radio-3:checked+.mj-carousel-content .mj-carousel-a043bae1603803a8-thumbnail {
+      display: inline-block !important;
+    }
+
     .mj-carousel-image img+div,
     .mj-carousel-thumbnail img+div {
       display: none !important;
