--- a/tests/testdata/mj-social-expected.html
+++ b/tests/testdata/mj-social-expected.html
@@ -106,14 +106,14 @@
                                     <tr>
                                       <td style="font-size:0;height:30px;vertical-align:middle;width:30px;">
                                         <a href="https://www.facebook.com/sharer/sharer.php?u=https://mjml.io/" target="_blank">
-                                          <img alt="" height="30" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/facebook.png" style="border-radius:3px;display:block;" width="30" />
+                                          <img alt="" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/facebook.png" style="border-radius:3px;display:block;" width="30" />
                                         </a>
                                       </td>
                                     </tr>
                                   </tbody>
                                 </table>
                               </td>
-                              <td style="vertical-align:middle;padding:4px 4px 4px 0;">
+                              <td style="vertical-align:middle;padding:4px 4px 4px 0;text-align:left;">
                                 <a href="https://www.facebook.com/sharer/sharer.php?u=https://mjml.io/" style="color:#333333;font-size:15px;font-family:Ubuntu, Helvetica, Arial, sans-serif;line-height:22px;text-decoration:none;" target="_blank"> Facebook </a>
                               </td>
                             </tr>
@@ -129,14 +129,14 @@
                                     <tr>
                                       <td style="font-size:0;height:30px;vertical-align:middle;width:30px;">
                                         <a href="https://plus.google.com/share?url=https://mjml.io/" target="_blank">
-                                          <img alt="" height="30" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/google-plus.png" style="border-radius:3px;display:block;" width="30" />
+                                          <img alt="" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/google-plus.png" style="border-radius:3px;display:block;" width="30" />
                                         </a>
                                       </td>
                                     </tr>
                                   </tbody>
                                 </table>
                               </td>
-                              <td style="vertical-align:middle;padding:4px 4px 4px 0;">
+                              <td style="vertical-align:middle;padding:4px 4px 4px 0;text-align:left;">
                                 <a href="https://plus.google.com/share?url=https://mjml.io/" style="color:#333333;font-size:15px;font-family:Ubuntu, Helvetica, Arial, sans-serif;line-height:22px;text-decoration:none;" target="_blank"> Google </a>
                               </td>
                             </tr>
@@ -152,14 +152,14 @@
                                     <tr>
                                       <td style="font-size:0;height:30px;vertical-align:middle;width:30px;">
                                         <a href="https://twitter.com/intent/tweet?url=https://mjml.io/" target="_blank">
-                                          <img alt="" height="30" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/twitter.png" style="border-radius:3px;display:block;" width="30" />
+                                          <img alt="" src="https://www.mailjet.com/images/theme/v1/icons/ico-social/twitter.png" style="border-radius:3px;display:block;" width="30" />
                                         </a>
                                       </td>
                                     </tr>
                                   </tbody>
                                 </table>
                               </td>
-                              <td style="vertical-align:middle;padding:4px 4px 4px 0;">
+                              <td style="vertical-align:middle;padding:4px 4px 4px 0;text-align:left;">
                                 <a href="https://twitter.com/intent/tweet?url=https://mjml.io/" style="color:#333333;font-size:15px;font-family:Ubuntu, Helvetica, Arial, sans-serif;line-height:22px;text-decoration:none;" target="_blank"> Twitter </a>
                               </td>
                             </tr>
